--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,40 @@
+.weather-app {
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 5px;
+}
+
 h1 {
+    color: blueviolet;
+    font-size: 50px;
+    font-weight: 600;
+    line-height: 28px;
+    margin-top: 20px;
+    margin-bottom: 20px;
+}
+
+h3 {
+    color: blueviolet;
+    font-size: 30px;
+    font-weight: 400;
+    margin-top: 20px;
+    margin-bottom: 5px;
+}
+
+h5 {
     color: blue;
+    font-size: 24px;
+    font-weight: 400;
+}
+
+li {
+    list-style: none;
+    margin: 0;
+    padding: 0;
+    color: blueviolet;
+    font-size: 16px;
+    font-weight: 200;
+    line-height: 19px;
 }
