--- a/src/style.css
+++ b/src/style.css
@@ -1,9 +1,5 @@
-.weather-app {
-    max-width: 700px;
-    margin: 30px auto;
-    padding: 20px;
-    border: 1px solid #dadde1;
-    border-radius: 5px;
+body {
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 h1 {
@@ -29,6 +25,11 @@ h5 {
     font-weight: 400;
 }
 
+ul {
+    margin: 0;
+    padding: 0;
+}
+
 li {
     list-style: none;
     margin: 0;
@@ -37,4 +38,12 @@ li {
     font-size: 16px;
     font-weight: 200;
     line-height: 19px;
+}
+
+.weather-app {
+    max-width: 700px;
+    margin: 30px auto;
+    padding: 20px;
+    border: 1px solid #dadde1;
+    border-radius: 5px;
 }
