Styled temperature in CSS

--- a/src/style.css
+++ b/src/style.css
@@ -4,25 +4,11 @@ body {
 
 h1 {
     color: blueviolet;
-    font-size: 50px;
+    font-size: 40px;
     font-weight: 600;
     line-height: 28px;
     margin-top: 20px;
     margin-bottom: 20px;
-}
-
-h3 {
-    color: blueviolet;
-    font-size: 30px;
-    font-weight: 400;
-    margin-top: 20px;
-    margin-bottom: 5px;
-}
-
-h5 {
-    color: blue;
-    font-size: 24px;
-    font-weight: 400;
 }
 
 ul {
@@ -40,10 +26,32 @@ li {
     line-height: 19px;
 }
 
-.weather-app {
-    max-width: 700px;
+.weather-app-wrapper {
+    max-width: 600px;
     margin: 30px auto;
+}
+
+.weather-app {
     padding: 20px;
     border: 1px solid #dadde1;
     border-radius: 5px;
+}
+
+.weather-temperature img {
+    margin-right: 10px;
+    height: 64px;
+    width: 64px;
+}
+
+.weather-temperature strong {
+    color: rgb(33, 33, 33);
+    font-size: 64px;
+    line-height: 1;
+    font-weight: 400;
+}
+
+.weather-temperature .units {
+    position: relative;
+    font-size: 16px;
+    top: -34px;
 }
