--- a/src/style.css
+++ b/src/style.css
@@ -20,11 +20,14 @@ li {
     list-style: none;
     margin: 0;
     padding: 0;
-    text-transform: capitalize;
     color: blueviolet;
     font-size: 16px;
     font-weight: 200;
     line-height: 19px;
+}
+
+li:first-letter {
+    text-transform: capitalize;
 }
 
 .weather-app-wrapper {
